# mbta-rs

./: CONTRIBUTE.md  Cargo.toml  LICENSE.txt  README.md  TODO.md  rustfmt.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: endpoint-bug.md
.github/workflows/: ci.yml  publish.yml  rust.yml  test.yml
resources/test/: alert.json  alerts.json  bad_request.json  facilities.json  facility.json  line.json  lines.json  predictions.json  route.json  route_pattern.json  route_patterns.json  routes.json  schedules.json  service.json  services.json
src/: client.rs  error.rs  lib.rs
src/map/: mod.rs
src/models/: alert.rs  datetime.rs  facility.rs  line.rs  live_facility.rs  mod.rs  prediction.rs  route.rs  route_pattern.rs  schedule.rs  service.rs  shape.rs  shared.rs  stop.rs  trip.rs  vehicle.rs
tests/: map.rs  simple.rs  with_route.rs
