[package]
name = "mbta-rs"
version = "0.2.0"
edition = "2021"
authors = ["Robert Yin <bobertoyin@gmail.com>"]
description = "Simple Rust client for interacting with the MBTA V3 API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/bobertoyin/mbta-rs"
documentation = "https://docs.rs/mbta-rs"
keywords = ["mbta", "public-transit", "massachusetts"]
categories = ["api-bindings", "web-programming::http-client"]

[dev-dependencies]
rstest = "0.12.0"

[dependencies]
chrono = "0.4.19"
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.31"
