[package]
name = "mbta-rs"
version = "0.5.0"
edition = "2021"
authors = ["Robert Yin <bobertoyin@gmail.com>"]
description = "Simple Rust client for interacting with the MBTA V3 API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/bobertoyin/mbta-rs"
documentation = "https://docs.rs/mbta-rs"
keywords = ["mbta", "public-transit", "massachusetts"]
categories = ["api-bindings", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
raster = "0.2.0"
rstest = "0.12.0"

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.31"
ureq = { version = "2.4.0", features = ["json"] }
